# IOBenchmark

./: CMakeLists.txt  README.md  format.sh
include/: ioBenchmark.hpp
src/: ioBenchmark.cpp  main.cpp
